# outline-cli

./: Cargo.toml  README.md  install.sh
src/: cli.rs  client.rs  config.rs  error.rs  main.rs  output.rs
src/commands/: auth.rs  collections.rs  documents.rs  mod.rs
src/models/: collection.rs  document.rs  mod.rs
